Mastering-Kubernetes-Third-Edition/Chapter10. Ingress y Servicios/social-graph-manager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-graph-manager-pub
spec:
  type: LoadBalancer
  ports:
  - port: 9090
  selector:
    svc: social-graph
    app: manager
