Mastering-Kubernetes-Third-Edition/Chapter10. Ingress y Servicios/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-graph-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: www.fgz.com
    http:
      paths:
      - path: /test(/|$)(.*)
        pathType: Prefix
        #pathType: Exact
        backend:
          service:
            name: social-graph-manager
            port:
              number: 9090
      - path: /db
        pathType: Exact
        backend:
          service:
            name: social-graph-db
            port:
              number: 5432
